--- a/designer/anchoreditor.lfm
+++ b/designer/anchoreditor.lfm
@@ -6,16 +6,15 @@ object AnchorDesigner: TAnchorDesigner
   OnCreate = AnchorDesignerCreate
   OnDestroy = AnchorDesignerDestroy
   OnShow = AnchorDesignerShow
-  PixelsPerInch = 90
+  PixelsPerInch = 112
   HorzScrollBar.Page = 519
   VertScrollBar.Page = 258
-  Left = 290
+  Left = 298
   Height = 259
-  Top = 163
+  Top = 179
   Width = 520
   object BorderSpaceGroupBox: TGroupBox
     Anchors = [akTop, akLeft, akBottom]
-    BorderSpacing.OnChange = nil
     Caption = 'BorderSpaceGroupBox'
     ClientHeight = 87
     ClientWidth = 168
@@ -26,26 +25,22 @@ object AnchorDesigner: TAnchorDesigner
     Top = 80
     Width = 172
     object LeftBorderSpaceSpinEdit: TSpinEdit
-      BorderSpacing.OnChange = nil
-      Decimal_Places = 0
+      ClimbRate = 1
       MaxValue = 100
       OnChange = BorderSpaceSpinEditChange
       ParentShowHint = False
       ShowHint = True
-      TabStop = True
       TabOrder = 0
       Height = 20
       Top = 30
       Width = 50
     end
     object RightBorderSpaceSpinEdit: TSpinEdit
-      BorderSpacing.OnChange = nil
-      Decimal_Places = 0
+      ClimbRate = 1
       MaxValue = 100
       OnChange = BorderSpaceSpinEditChange
       ParentShowHint = False
       ShowHint = True
-      TabStop = True
       TabOrder = 1
       Left = 118
       Height = 20
@@ -53,26 +48,22 @@ object AnchorDesigner: TAnchorDesigner
       Width = 50
     end
     object TopBorderSpaceSpinEdit: TSpinEdit
-      BorderSpacing.OnChange = nil
-      Decimal_Places = 0
+      ClimbRate = 1
       MaxValue = 100
       OnChange = BorderSpaceSpinEditChange
       ParentShowHint = False
       ShowHint = True
-      TabStop = True
       TabOrder = 2
       Left = 58
       Height = 20
       Width = 50
     end
     object BottomBorderSpaceSpinEdit: TSpinEdit
-      BorderSpacing.OnChange = nil
-      Decimal_Places = 0
+      ClimbRate = 1
       MaxValue = 100
       OnChange = BorderSpaceSpinEditChange
       ParentShowHint = False
       ShowHint = True
-      TabStop = True
       TabOrder = 3
       Left = 58
       Height = 20
@@ -80,13 +71,11 @@ object AnchorDesigner: TAnchorDesigner
       Width = 50
     end
     object AroundBorderSpaceSpinEdit: TSpinEdit
-      BorderSpacing.OnChange = nil
-      Decimal_Places = 0
+      ClimbRate = 1
       MaxValue = 100
       OnChange = BorderSpaceSpinEditChange
       ParentShowHint = False
       ShowHint = True
-      TabStop = True
       TabOrder = 4
       Left = 58
       Height = 20
@@ -96,7 +85,6 @@ object AnchorDesigner: TAnchorDesigner
   end
   object TopGroupBox: TGroupBox
     Anchors = [akTop, akLeft, akRight]
-    BorderSpacing.OnChange = nil
     Caption = 'TopGroupBox'
     ClientHeight = 33
     ClientWidth = 404
@@ -107,7 +95,6 @@ object AnchorDesigner: TAnchorDesigner
     Width = 408
     object TopRefTopSpeedButton: TSpeedButton
       Anchors = [akTop, akRight]
-      BorderSpacing.OnChange = nil
       GroupIndex = 1
       NumGlyphs = 0
       OnClick = ReferenceSideButtonClicked
@@ -119,7 +106,6 @@ object AnchorDesigner: TAnchorDesigner
     end
     object TopRefBottomSpeedButton: TSpeedButton
       Anchors = [akTop, akRight]
-      BorderSpacing.OnChange = nil
       GroupIndex = 1
       NumGlyphs = 0
       OnClick = ReferenceSideButtonClicked
@@ -131,7 +117,6 @@ object AnchorDesigner: TAnchorDesigner
     end
     object TopRefCenterSpeedButton: TSpeedButton
       Anchors = [akTop, akRight]
-      BorderSpacing.OnChange = nil
       GroupIndex = 1
       NumGlyphs = 0
       OnClick = ReferenceSideButtonClicked
@@ -142,8 +127,6 @@ object AnchorDesigner: TAnchorDesigner
       Width = 30
     end
     object TopSiblingLabel: TLabel
-      AutoSize = True
-      BorderSpacing.OnChange = nil
       Caption = 'Sibling'
       ParentColor = True
       Left = 94
@@ -152,7 +135,6 @@ object AnchorDesigner: TAnchorDesigner
       Width = 38
     end
     object TopAnchoredCheckBox: TCheckBox
-      BorderSpacing.OnChange = nil
       Caption = 'Enabled'
       OnChange = AnchorEnabledCheckBoxChange
       TabOrder = 0
@@ -163,7 +145,6 @@ object AnchorDesigner: TAnchorDesigner
     end
     object TopSiblingComboBox: TComboBox
       Anchors = [akTop, akLeft, akRight]
-      BorderSpacing.OnChange = nil
       MaxLength = 0
       OnChange = SiblingComboBoxChange
       ParentShowHint = False
@@ -177,7 +158,6 @@ object AnchorDesigner: TAnchorDesigner
   end
   object BottomGroupBox: TGroupBox
     Anchors = [akLeft, akRight, akBottom]
-    BorderSpacing.OnChange = nil
     Caption = 'BottomGroupBox'
     ClientHeight = 33
     ClientWidth = 404
@@ -189,7 +169,6 @@ object AnchorDesigner: TAnchorDesigner
     Width = 408
     object BottomRefTopSpeedButton: TSpeedButton
       Anchors = [akTop, akRight]
-      BorderSpacing.OnChange = nil
       GroupIndex = 3
       NumGlyphs = 0
       OnClick = ReferenceSideButtonClicked
@@ -201,7 +180,6 @@ object AnchorDesigner: TAnchorDesigner
     end
     object BottomRefBottomSpeedButton: TSpeedButton
       Anchors = [akTop, akRight]
-      BorderSpacing.OnChange = nil
       GroupIndex = 3
       NumGlyphs = 0
       OnClick = ReferenceSideButtonClicked
@@ -213,7 +191,6 @@ object AnchorDesigner: TAnchorDesigner
     end
     object BottomRefCenterSpeedButton: TSpeedButton
       Anchors = [akTop, akRight]
-      BorderSpacing.OnChange = nil
       GroupIndex = 3
       NumGlyphs = 0
       OnClick = ReferenceSideButtonClicked
@@ -224,8 +201,6 @@ object AnchorDesigner: TAnchorDesigner
       Width = 30
     end
     object BottomSiblingLabel: TLabel
-      AutoSize = True
-      BorderSpacing.OnChange = nil
       Caption = 'Sibling'
       ParentColor = True
       Left = 94
@@ -234,7 +209,6 @@ object AnchorDesigner: TAnchorDesigner
       Width = 38
     end
     object BottomAnchoredCheckBox: TCheckBox
-      BorderSpacing.OnChange = nil
       Caption = 'Enabled'
       OnChange = AnchorEnabledCheckBoxChange
       TabOrder = 0
@@ -245,7 +219,6 @@ object AnchorDesigner: TAnchorDesigner
     end
     object BottomSiblingComboBox: TComboBox
       Anchors = [akTop, akLeft, akRight]
-      BorderSpacing.OnChange = nil
       MaxLength = 0
       OnChange = SiblingComboBoxChange
       ParentShowHint = False
@@ -259,7 +232,6 @@ object AnchorDesigner: TAnchorDesigner
   end
   object RightGroupBox: TGroupBox
     Anchors = [akTop, akLeft, akBottom]
-    BorderSpacing.OnChange = nil
     Caption = 'RightGroupBox'
     ClientHeight = 112
     ClientWidth = 146
@@ -270,7 +242,6 @@ object AnchorDesigner: TAnchorDesigner
     Top = 64
     Width = 150
     object RightRefLeftSpeedButton: TSpeedButton
-      BorderSpacing.OnChange = nil
       GroupIndex = 4
       NumGlyphs = 0
       OnClick = ReferenceSideButtonClicked
@@ -282,7 +253,6 @@ object AnchorDesigner: TAnchorDesigner
       Width = 30
     end
     object RightRefRightSpeedButton: TSpeedButton
-      BorderSpacing.OnChange = nil
       GroupIndex = 4
       NumGlyphs = 0
       OnClick = ReferenceSideButtonClicked
@@ -294,7 +264,6 @@ object AnchorDesigner: TAnchorDesigner
       Width = 30
     end
     object RightRefCenterSpeedButton: TSpeedButton
-      BorderSpacing.OnChange = nil
       GroupIndex = 4
       NumGlyphs = 0
       OnClick = ReferenceSideButtonClicked
@@ -306,8 +275,6 @@ object AnchorDesigner: TAnchorDesigner
       Width = 30
     end
     object RightSiblingLabel: TLabel
-      AutoSize = True
-      BorderSpacing.OnChange = nil
       Caption = 'Sibling'
       ParentColor = True
       Left = 2
@@ -316,7 +283,6 @@ object AnchorDesigner: TAnchorDesigner
       Width = 38
     end
     object RightAnchoredCheckBox: TCheckBox
-      BorderSpacing.OnChange = nil
       Caption = 'Enabled'
       OnChange = AnchorEnabledCheckBoxChange
       TabOrder = 0
@@ -327,11 +293,11 @@ object AnchorDesigner: TAnchorDesigner
     end
     object RightSiblingComboBox: TComboBox
       Anchors = [akTop, akLeft, akRight]
-      BorderSpacing.OnChange = nil
       MaxLength = 0
       OnChange = SiblingComboBoxChange
       ParentShowHint = False
       ShowHint = True
+      TabOrder = 1
       Text = 'RightSiblingComboBox'
       Left = 5
       Height = 25
@@ -341,7 +307,6 @@ object AnchorDesigner: TAnchorDesigner
   end
   object LeftGroupBox: TGroupBox
     Anchors = [akTop, akLeft, akBottom]
-    BorderSpacing.OnChange = nil
     Caption = 'LeftGroupBox'
     ClientHeight = 112
     ClientWidth = 146
@@ -352,7 +317,6 @@ object AnchorDesigner: TAnchorDesigner
     Top = 64
     Width = 150
     object LeftRefLeftSpeedButton: TSpeedButton
-      BorderSpacing.OnChange = nil
       GroupIndex = 2
       NumGlyphs = 0
       OnClick = ReferenceSideButtonClicked
@@ -364,7 +328,6 @@ object AnchorDesigner: TAnchorDesigner
       Width = 30
     end
     object LeftRefRightSpeedButton: TSpeedButton
-      BorderSpacing.OnChange = nil
       GroupIndex = 2
       NumGlyphs = 0
       OnClick = ReferenceSideButtonClicked
@@ -376,7 +339,6 @@ object AnchorDesigner: TAnchorDesigner
       Width = 30
     end
     object LeftRefCenterSpeedButton: TSpeedButton
-      BorderSpacing.OnChange = nil
       GroupIndex = 2
       NumGlyphs = 0
       OnClick = ReferenceSideButtonClicked
@@ -388,8 +350,6 @@ object AnchorDesigner: TAnchorDesigner
       Width = 30
     end
     object LeftSiblingLabel: TLabel
-      AutoSize = True
-      BorderSpacing.OnChange = nil
       Caption = 'Sibling'
       ParentColor = True
       Left = 2
@@ -398,7 +358,6 @@ object AnchorDesigner: TAnchorDesigner
       Width = 38
     end
     object LeftAnchoredCheckBox: TCheckBox
-      BorderSpacing.OnChange = nil
       Caption = 'Enabled'
       OnChange = AnchorEnabledCheckBoxChange
       TabOrder = 0
@@ -409,11 +368,11 @@ object AnchorDesigner: TAnchorDesigner
     end
     object LeftSiblingComboBox: TComboBox
       Anchors = [akTop, akLeft, akRight]
-      BorderSpacing.OnChange = nil
       MaxLength = 0
       OnChange = SiblingComboBoxChange
       ParentShowHint = False
       ShowHint = True
+      TabOrder = 1
       Text = 'LeftSiblingComboBox'
       Left = 5
       Height = 25
