--- a/ide/aboutfrm.lfm
+++ b/ide/aboutfrm.lfm
@@ -1,9 +1,10 @@
 object AboutForm: TAboutForm
+  ActiveControl = CloseButton
   Caption = 'About Lazarus'
   ClientHeight = 270
   ClientWidth = 608
   OnCreate = AboutFormCreate
-  PixelsPerInch = 112
+  PixelsPerInch = 96
   Position = poScreenCenter
   HorzScrollBar.Page = 607
   VertScrollBar.Page = 269
@@ -13,32 +14,35 @@ object AboutForm: TAboutForm
   Width = 608
   object VersionLabel: TLabel
     Alignment = taCenter
+    BorderSpacing.OnChange = nil
     Caption = 'Version #:'
     ParentColor = True
     Left = 14
-    Height = 12
+    Height = 13
     Top = 6
-    Width = 57
+    Width = 50
   end
   object BuildDateLabel: TLabel
     Alignment = taCenter
+    BorderSpacing.OnChange = nil
     Caption = 'Date:'
     ParentColor = True
     Left = 14
-    Height = 12
+    Height = 13
     Top = 23
-    Width = 29
+    Width = 27
   end
   object RevisionLabel: TLabel
-    BorderSpacing.OnChange = nil
     Caption = 'RevisionLabel'
     Color = clNone
     Left = 14
-    Height = 12
+    Height = 13
     Top = 40
-    Width = 79
+    Width = 65
   end
-  object Button1: TBitBtn
+  object CloseButton: TBitBtn
+    BorderSpacing.OnChange = nil
+    Cancel = True
     Caption = 'Close'
     Glyph.Data = {
       F70200002F2A2058504D202A2F0A7374617469632063686172202A20626F7461
@@ -75,6 +79,7 @@ object AboutForm: TAboutForm
   end
   object Notebook1: TNotebook
     Anchors = [akTop, akLeft, akRight, akBottom]
+    BorderSpacing.OnChange = nil
     PageIndex = 0
     Left = 215
     Height = 261
@@ -82,35 +87,34 @@ object AboutForm: TAboutForm
     Width = 389
     object AboutPage: TPage
       Caption = 'About'
-      ClientWidth = 385
-      ClientHeight = 231
-      Left = 2
-      Height = 231
-      Top = 28
-      Width = 385
+      ClientWidth = 381
+      ClientHeight = 235
+      Height = 235
+      Width = 381
       object AboutMemo: TMemo
         Align = alClient
+        BorderSpacing.OnChange = nil
         ReadOnly = True
         ScrollBars = ssAutoBoth
         TabOrder = 0
-        Height = 231
-        Width = 385
+        Height = 235
+        Width = 381
       end
     end
     object ContributorsPage: TPage
       Caption = 'Contributors'
-      ClientWidth = 389
-      ClientHeight = 261
-      Visible = False
-      Height = 261
-      Width = 389
+      ClientWidth = 381
+      ClientHeight = 235
+      Height = 235
+      Width = 381
       object ContributorsMemo: TMemo
         Align = alClient
+        BorderSpacing.OnChange = nil
         ReadOnly = True
         ScrollBars = ssAutoBoth
         TabOrder = 0
-        Height = 261
-        Width = 389
+        Height = 235
+        Width = 381
       end
     end
   end
